--- a/Back-end/MediaVault/src/main/resources/application-dev.properties
+++ b/Back-end/MediaVault/src/main/resources/application-dev.properties
@@ -7,3 +7,9 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+
+spring.servlet.multipart.enabled=true
+spring.servlet.multipart.max-file-size=50MB
+spring.servlet.multipart.max-request-size=50MB
+logging.level.org.springframework.web.multipart=DEBUG
+
