--- a/Back-end/MediaVault/src/main/resources/application-dev.properties
+++ b/Back-end/MediaVault/src/main/resources/application-dev.properties
@@ -1,5 +1,5 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/media_valt?useSSL=false&serverTimezone=UTC
-spring.datasource.username=admin_developer
+spring.datasource.username=admin
 spring.datasource.password=1848
 
 spring.jpa.hibernate.ddl-auto=none
@@ -13,3 +13,7 @@ spring.servlet.multipart.max-file-size=50MB
 spring.servlet.multipart.max-request-size=50MB
 logging.level.org.springframework.web.multipart=DEBUG
 
+# Adicione estas linhas
+spring.web.cors.allowed-origins=http://localhost:5173
+spring.web.cors.allowed-methods=GET,POST,PUT,DELETE,OPTIONS
+spring.web.cors.allowed-headers=*
